[package]
name = "parameter_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
egui = "0.35.0"
env_logger = "0.11.11"
log = { version = "0.4.33", features = ["serde"] }
rosc = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
vrchat_osc = "2.2.0"
